style for portfolio

--- a/index.html
+++ b/index.html
@@ -79,116 +79,112 @@
         </div>
       </section>
       <!-- наші переваги -->
-      <section class="full-width">
+      <section class="full-width my-advantages">
         <div class="container">
-          <div class="my-advantages">
-            <h2 style="display: none">Advantages</h2>
-            <ul class="flex my-advantages-list">
-              <li>
-                <h3 class="header-3 navy-blue">Strategy</h3>
-                <p class="body-text">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </li>
-              <li>
-                <h3 class="header-3 navy-blue">Punctuality</h3>
-                <p class="body-text">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </li>
-              <li>
-                <h3 class="header-3 navy-blue">Diligence</h3>
-                <p class="body-text">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </li>
-              <li>
-                <h3 class="header-3 navy-blue">Technologies</h3>
-                <p class="body-text">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </li>
-            </ul>
-          </div>
+          <h2 class="hide">Advantages</h2>
+          <ul class="flex my-advantages-list">
+            <li>
+              <h3 class="header-3 navy-blue">Strategy</h3>
+              <p class="body-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="header-3 navy-blue">Punctuality</h3>
+              <p class="body-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="header-3 navy-blue">Diligence</h3>
+              <p class="body-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="header-3 navy-blue">Technologies</h3>
+              <p class="body-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
       <!-- що ми робимо -->
-      <section class="full-width">
+      <section class="full-width my-products">
         <div class="container">
-          <div class="my-products">
-            <h2 class="header-2 navy-blue">What are we doing</h2>
-            <ul class="flex my-products-list">
-              <li>
-                <img src="./images/computer.jpg" alt="Computer" width="360" />
-              </li>
-              <li>
-                <img
-                  src="./images/phonescreen.jpg"
-                  alt="Phonescreen"
-                  width="360"
-                />
-              </li>
-              <li><img src="./images/phone.jpg" alt="Phone" width="360" /></li>
-            </ul>
-          </div>
+          <h2 class="header-2 navy-blue my-products-title">
+            What are we doing
+          </h2>
+          <ul class="flex my-products-list">
+            <li>
+              <img src="./images/computer.jpg" alt="Computer" width="360" />
+            </li>
+            <li>
+              <img
+                src="./images/phonescreen.jpg"
+                alt="Phonescreen"
+                width="360"
+              />
+            </li>
+            <li><img src="./images/phone.jpg" alt="Phone" width="360" /></li>
+          </ul>
         </div>
       </section>
       <!-- наша команда -->
-      <section class="bg-cloud full-width">
+      <section class="bg-cloud full-width my-team">
         <div class="container">
-          <div class="my-team">
-            <h2 class="header-2 navy-blue">Our Team</h2>
-            <ul class="flex my-team-list">
-              <li class="my-team-card bg-snow">
-                <img
-                  src="./images/our_team/mark_guerrero.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                />
-                <div class="my-team-card-caption">
-                  <h3 class="header-3 navy-blue">Mark Guerrero</h3>
-                  <p class="body-text">Product Designer</p>
-                </div>
-              </li>
-              <li class="my-team-card bg-snow">
-                <img
-                  src="./images/our_team/tom_ford.jpg"
-                  alt="Tom Ford"
-                  width="264"
-                />
-                <div class="my-team-card-caption">
-                  <h3 class="header-3 navy-blue">Tom Ford</h3>
-                  <p class="body-text">Frontend Developer</p>
-                </div>
-              </li>
-              <li class="my-team-card bg-snow">
-                <img
-                  src="./images/our_team/camila_garcia.jpg"
-                  alt="Camila Garcia"
-                  width="264"
-                />
-                <div class="my-team-card-caption">
-                  <h3 class="header-3 navy-blue">Camila Garcia</h3>
-                  <p class="body-text">Marketing</p>
-                </div>
-              </li>
-              <li class="my-team-card bg-snow">
-                <img
-                  src="./images/our_team/daniel_wilson.jpg"
-                  alt="Daniel Wilson"
-                  width="264"
-                />
-                <div class="my-team-card-caption">
-                  <h3 class="header-3 navy-blue">Daniel Wilson</h3>
-                  <p class="body-text">UI Designer</p>
-                </div>
-              </li>
-            </ul>
-          </div>
+          <h2 class="header-2 navy-blue my-team-title">Our Team</h2>
+          <ul class="flex my-team-list">
+            <li class="my-team-card bg-snow">
+              <img
+                src="./images/our_team/mark_guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <div class="my-team-card-caption">
+                <h3 class="header-3 navy-blue">Mark Guerrero</h3>
+                <p class="body-text">Product Designer</p>
+              </div>
+            </li>
+            <li class="my-team-card bg-snow">
+              <img
+                src="./images/our_team/tom_ford.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
+              <div class="my-team-card-caption">
+                <h3 class="header-3 navy-blue">Tom Ford</h3>
+                <p class="body-text">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="my-team-card bg-snow">
+              <img
+                src="./images/our_team/camila_garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <div class="my-team-card-caption">
+                <h3 class="header-3 navy-blue">Camila Garcia</h3>
+                <p class="body-text">Marketing</p>
+              </div>
+            </li>
+            <li class="my-team-card bg-snow">
+              <img
+                src="./images/our_team/daniel_wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <div class="my-team-card-caption">
+                <h3 class="header-3 navy-blue">Daniel Wilson</h3>
+                <p class="body-text">UI Designer</p>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
