--- a/portfolio.html
+++ b/portfolio.html
@@ -65,31 +65,31 @@
       </div>
     </header>
     <main>
-      <section>
+      <!--Filters-->
+      <section class="full-width my-filtres">
         <div class="container">
-          <!--Filters-->
-          <ul class="reset">
-            <li>
+          <ul class="flex my-filtres-list">
+            <li class="my-filtres-item">
               <button type="button" class="filter-button button-text">
                 All
               </button>
             </li>
-            <li>
+            <li class="my-filtres-item">
               <button type="button" class="filter-button button-text">
                 Web Site
               </button>
             </li>
-            <li>
+            <li class="my-filtres-item">
               <button type="button" class="filter-button button-text">
                 App
               </button>
             </li>
-            <li>
+            <li class="my-filtres-item">
               <button type="button" class="filter-button button-text">
                 Design
               </button>
             </li>
-            <li>
+            <li class="my-filtres-item">
               <button type="button" class="filter-button button-text">
                 Marketing
               </button>
@@ -97,98 +97,114 @@
           </ul>
         </div>
       </section>
-      <section>
+      <!--Portfolio-->
+      <section class="full-width my-portfolio">
         <div class="container">
-          <h2>Portfolio</h2>
-          <!--Portfolio-->
-          <!--Row 1-->
-          <ul class="reset">
-            <li>
+          <h1 class="hide">Portfolio</h1>
+          <ul class="flex my-portfolio-list">
+            <!--Row 1-->
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/banking_app.jpg"
                 alt="Banking application"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Banking App Interface Concept</h3>
-              <p class="body-text">App</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">
+                  Banking App Interface Concept
+                </h2>
+                <p class="body-text">App</p>
+              </div>
             </li>
-            <li>
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/cashless.jpg"
                 alt="Mobile phone"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Cashless Payment</h3>
-              <p class="body-text">Marketing</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">Cashless Payment</h2>
+                <p class="body-text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/meditaion_app.jpg"
                 alt="Laptop and phone"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Meditaion App</h3>
-              <p class="body-text">App</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">Meditaion App</h2>
+                <p class="body-text">App</p>
+              </div>
             </li>
-          </ul>
-          <!--Row 2-->
-          <ul class="reset">
-            <li>
+            <!--Row 2-->
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/taxi.jpg"
                 alt="Man behind the wheel"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Taxi Service</h3>
-              <p class="body-text">Marketing</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">Taxi Service</h2>
+                <p class="body-text">Marketing</p>
+              </div>
             </li>
-            <li>
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/screen_illustrations.jpg"
                 alt="Mobile phone screen"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Screen Illustrations</h3>
-              <p class="body-text">Design</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">Screen Illustrations</h2>
+                <p class="body-text">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/courses.jpg"
                 alt="Happy girl"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Online Courses</h3>
-              <p class="body-text">Marketing</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">Online Courses</h2>
+                <p class="body-text">Marketing</p>
+              </div>
             </li>
-          </ul>
-          <!--Row 3-->
-          <ul class="reset">
-            <li>
+            <!--Row 3-->
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/insta_stories.jpg"
                 alt="Examples of Instagram stories"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Instagram Stories Concept</h3>
-              <p class="body-text">Design</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">Instagram Stories Concept</h2>
+                <p class="body-text">Design</p>
+              </div>
             </li>
-            <li>
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/food.jpg"
                 alt="Plant food"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Organic Food</h3>
-              <p class="body-text">Web Site</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">Organic Food</h2>
+                <p class="body-text">Web Site</p>
+              </div>
             </li>
-            <li>
+            <li class="my-portfolio-item">
               <img
                 src="./images/portfolio/coffee.jpg"
                 alt="We are preparing cappuccino"
                 width="360"
               />
-              <h3 class="header-3 navy-blue">Fresh Coffee</h3>
-              <p class="body-text">Web Site</p>
+              <div class="my-portfolio-caption">
+                <h2 class="header-3 navy-blue">Fresh Coffee</h2>
+                <p class="body-text">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
