--- a/portfolio.html
+++ b/portfolio.html
@@ -17,60 +17,52 @@
   <body>
     <!-- шапка і навігація -->
     <header class="full-width">
-      <div class="container">
-        <div class="my-header">
-          <!-- навігаційна панель -->
-          <nav class="my-nav">
-            <a href="./index.html" class="logo navy-blue"
-              ><span class="iris">Web</span>Studio</a
-            >
-            <ul class="my-link-list">
-              <li class="my-link-item">
-                <a
-                  href="./index.html"
-                  class="my-link body-medium-text navy-blue"
-                  >Studio</a
-                >
-              </li>
-              <li class="my-link-item">
-                <a
-                  href="./portfolio.html"
-                  class="my-link body-medium-text navy-blue"
-                  >Portfolio</a
-                >
-              </li>
-              <li class="my-link-item">
-                <a href="" class="my-link body-medium-text navy-blue"
-                  >Contacts</a
-                >
-              </li>
-            </ul>
-          </nav>
-          <address>
-            <ul class="my-address-list">
-              <li class="my-address-item">
-                <a
-                  href="mailto:info@devstudio.com"
-                  class="my-address-link body-text slate"
-                  >info@devstudio.com</a
-                >
-              </li>
-              <li class="my-address-item">
-                <a
-                  href="tel:+110001111111"
-                  class="my-address-link body-text slate"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-            </ul>
-          </address>
-        </div>
+      <div class="container my-header">
+        <!-- навігаційна панель -->
+        <nav class="my-nav">
+          <a href="./index.html" class="logo dark"
+            ><span class="primary-brand">Web</span>Studio</a
+          >
+          <ul class="my-link-list">
+            <li class="my-link-item">
+              <a href="./index.html" class="my-link body-medium-text dark"
+                >Studio</a
+              >
+            </li>
+            <li class="my-link-item">
+              <a href="./portfolio.html" class="my-link body-medium-text dark"
+                >Portfolio</a
+              >
+            </li>
+            <li class="my-link-item">
+              <a href="" class="my-link body-medium-text dark">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="my-address-list">
+            <li class="my-address-item">
+              <a
+                href="mailto:info@devstudio.com"
+                class="my-address-link body-text text"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="my-address-item">
+              <a href="tel:+110001111111" class="my-address-link body-text text"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
       </div>
     </header>
     <main>
-      <!--Filters-->
-      <div class="full-width my-filtres">
+      <!--Portfolio-->
+      <section class="full-width my-portfolio">
         <div class="container">
+          <h1 class="visually-hidden">Portfolio</h1>
+          <!--Filters-->
           <ul class="my-filtres-list">
             <li class="my-filtres-item">
               <button type="button" class="filter-button button-text">
@@ -98,12 +90,7 @@
               </button>
             </li>
           </ul>
-        </div>
-      </div>
-      <!--Portfolio-->
-      <section class="full-width my-portfolio">
-        <div class="container">
-          <h1 class="visually-hidden">Portfolio</h1>
+          <!--Portfolio table-->
           <ul class="my-portfolio-list">
             <!--Row 1-->
             <li class="my-portfolio-item">
@@ -113,9 +100,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">
-                  Banking App Interface Concept
-                </h2>
+                <h2 class="header-3 dark">Banking App Interface Concept</h2>
                 <p class="body-text">App</p>
               </div>
             </li>
@@ -126,7 +111,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">Cashless Payment</h2>
+                <h2 class="header-3 dark">Cashless Payment</h2>
                 <p class="body-text">Marketing</p>
               </div>
             </li>
@@ -137,7 +122,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">Meditaion App</h2>
+                <h2 class="header-3 dark">Meditaion App</h2>
                 <p class="body-text">App</p>
               </div>
             </li>
@@ -149,7 +134,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">Taxi Service</h2>
+                <h2 class="header-3 dark">Taxi Service</h2>
                 <p class="body-text">Marketing</p>
               </div>
             </li>
@@ -160,7 +145,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">Screen Illustrations</h2>
+                <h2 class="header-3 dark">Screen Illustrations</h2>
                 <p class="body-text">Design</p>
               </div>
             </li>
@@ -171,7 +156,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">Online Courses</h2>
+                <h2 class="header-3 dark">Online Courses</h2>
                 <p class="body-text">Marketing</p>
               </div>
             </li>
@@ -183,7 +168,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">Instagram Stories Concept</h2>
+                <h2 class="header-3 dark">Instagram Stories Concept</h2>
                 <p class="body-text">Design</p>
               </div>
             </li>
@@ -194,7 +179,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">Organic Food</h2>
+                <h2 class="header-3 dark">Organic Food</h2>
                 <p class="body-text">Web Site</p>
               </div>
             </li>
@@ -205,7 +190,7 @@
                 width="360"
               />
               <div class="my-portfolio-caption">
-                <h2 class="header-3 navy-blue">Fresh Coffee</h2>
+                <h2 class="header-3 dark">Fresh Coffee</h2>
                 <p class="body-text">Web Site</p>
               </div>
             </li>
@@ -213,13 +198,13 @@
         </div>
       </section>
     </main>
-    <footer class="bg-navy-blue full-width">
+    <footer class="bg-dark full-width">
       <div class="container">
         <div class="my-footer">
-          <a href="./index.html" class="logo cloud"
-            ><span class="iris">Web</span>Studio</a
+          <a href="./index.html" class="logo light"
+            ><span class="primary-brand">Web</span>Studio</a
           >
-          <p class="my-footer-text body-text cornflower">
+          <p class="my-footer-text body-text accent">
             Increase the flow of customers and sales for your business with
             digital marketing & growth solutions.
           </p>
